BAP-2024: Fix address and name formats on JS - fixed region code in format

--- a/Resources/config/address_format.yml
+++ b/Resources/config/address_format.yml
@@ -495,7 +495,7 @@ UM:
     zip_name_type: zip
     region_name_type: region
 US:
-    format: '%name%\n%organization%\n%street%\n%CITY% %REGION% %COUNTRY% %postal_code%'
+    format: '%name%\n%organization%\n%street%\n%CITY% %REGION_CODE% %COUNTRY_ISO2% %postal_code%'
     require: [street, city, region, postal_code]
     zip_name_type: zip
     region_name_type: region
