BAP-2201: Impossible to install application. Fatal is occurred  - fixed

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -108,7 +108,7 @@ services:
         class: %oro_locale.locale_listener.class%
         arguments:
             - @oro_locale.settings
-            - @translator
+            - %installed%
         calls:
             - [ setRequest, [@?request=] ]
         tags:
