CRM-5745: Calendar Event and Task Reminder Email Displaying Incorrect Time Zone

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -307,6 +307,6 @@ services:
         class: Oro\Bundle\LocaleBundle\Twig\DateTimeOrganizationExtension
         parent: oro_locale.twig.date_time
         calls:
-            - [setConfigManager, ['@oro_config.scope.global']]
+            - [setConfigManager, ['@oro_config.global']]
         tags:
             - { name: twig.extension }
