--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -306,6 +306,7 @@ services:
     oro_locale.twig.date_time_organization:
         class: Oro\Bundle\LocaleBundle\Twig\DateTimeOrganizationExtension
         parent: oro_locale.twig.date_time
+        deprecated: The "%service_id%" service is deprecated since 1.11, will be removed after 1.13.
         calls:
             - [setConfigManager, ['@oro_config.global']]
         tags:
