BB-3749: Use currently selected Localization at localized fallback values - cs updates

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -56,8 +56,8 @@ services:
         class: 'Oro\Bundle\LocaleBundle\Helper\LocalizationHelper'
         public: false
         arguments:
-            - "@oro_locale.provider.localization"
-            - "@oro_locale.provider.current_localization"
+            - '@oro_locale.provider.localization'
+            - '@oro_locale.provider.current_localization'
 
     oro_locale.listener.orm.localization_listener:
         class: 'Oro\Bundle\LocaleBundle\EventListener\ORM\LocalizationListener'
