--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -38,11 +38,6 @@ parameters:
     oro_locale.entity_generator.extension.class: Oro\Bundle\LocaleBundle\Tools\GeneratorExtensions\DefaultFallbackGeneratorExtension
 
 services:
-    oro_locale.cache:
-            parent: oro.cache.abstract
-            calls:
-                - [ setNamespace, [ 'oro_locale' ] ]
-
     oro_locale.settings:
         class: %oro_locale.settings.class%
         arguments:
@@ -70,6 +65,7 @@ services:
         tags:
             - { name: doctrine.orm.entity_listener, entity: '%oro_locale.entity.localization.class%', event: postPersist }
             - { name: doctrine.orm.entity_listener, entity: '%oro_locale.entity.localization.class%', event: postUpdate }
+            - { name: doctrine.orm.entity_listener, entity: '%oro_locale.entity.localization.class%', event: postRemove }
 
     oro_locale.translation.strategy.localization_fallback_strategy:
         class: 'Oro\Bundle\LocaleBundle\Translation\Strategy\LocalizationFallbackStrategy'
@@ -79,12 +75,6 @@ services:
             - '@oro_locale.cache.provider.tree_fallback_strategy'
         calls:
             - [setEntityClass, ['%oro_locale.entity.localization.class%']]
-
-    oro_locale.cache.provider.tree_fallback_strategy:
-        parent: oro.cache.abstract
-        public: false
-        calls:
-            - [ setNamespace, [ 'oro_locale_tree_fallback_strategy' ] ]
 
     # Calendar
     oro_locale.calendar:
@@ -300,10 +290,10 @@ services:
     oro_locale.provider.localization_choices:
         class: 'Oro\Bundle\LocaleBundle\Provider\LocalizationChoicesProvider'
         arguments:
-            - '@oro_locale.repository.localization'
             - '@oro_config.manager'
             - '@oro_locale.formatter.language_code'
             - '@oro_locale.formatter.formatting_code'
+            - '@oro_locale.provider.localization'
 
     oro_locale.entity_generator.extension:
         class: %oro_locale.entity_generator.extension.class%
@@ -320,7 +310,7 @@ services:
             - { name: twig.extension }
 
     oro_locale.provider.localization:
-        class: Oro\Bundle\LocaleBundle\Provider\LocalizationProvider
+        class: 'Oro\Bundle\LocaleBundle\Provider\LocalizationProvider'
         arguments:
             - '@oro_locale.repository.localization'
             - '@oro_config.global'
