BB-3749: Use currently selected Localization at localized fallback values - updated layout configs after merge with master - created Layout/ExpressionLanguageProvider instead of Layout/ConfigExpression/LocalizedValue - updated layout configs and used localized_value ExpressionFunction

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -329,9 +329,9 @@ services:
         tags:
             - { name: twig.extension }
 
-    oro_locale.expression.localized_value:
-        class: Oro\Bundle\LocaleBundle\Layout\ConfigExpression\LocalizedValue
+    oro_locale.expression_language_provider:
+        class: Oro\Bundle\LocaleBundle\Layout\ExpressionLanguageProvider
         arguments:
             - '@oro_locale.helper.localization'
         tags:
-            - { name: oro_layout.expression, alias: localized_value }
+            - { name: oro_layout.expression_language_provider }
