BAP-11411: Update system configuration  - removed system configuration for translations  - removed form type, template , js component and css styles  - added method to LanguageProvider that returns actual enabled languages list  - updated Language entity repository  - updated unit tests

--- a/Resources/config/form_types.yml
+++ b/Resources/config/form_types.yml
@@ -34,6 +34,7 @@ services:
         class: '%oro_locale.form.type.language.class%'
         arguments:
             - '@oro_config.global'
+            - '@oro_translation.provider.language'
         tags:
             - { name: form.type, alias: oro_language }
 
