--- a/Resources/config/requirejs.yml
+++ b/Resources/config/requirejs.yml
@@ -38,3 +38,5 @@ config:
         'orolocale/js/moment-l10n': 'bundles/orolocale/js/moment-l10n.js'
         'orolocale/js/numeral-l10n': 'bundles/orolocale/js/numeral-l10n.js'
         'orolocale/js/app/views/fallback-view': 'bundles/orolocale/js/app/views/fallback-view.js'
+        'orolocale/js/app/views/language-select-view': 'bundles/orolocale/js/app/views/language-select-view.js'
+        'orolocale/js/app/views/languages-select-view': 'bundles/orolocale/js/app/views/languages-select-view.js'
