CRM-5284: Paste HTML content into email templates
- set required option to false on all configuration booleans

--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -47,7 +47,7 @@ oro_system_configuration:
             options:
                 label: oro.locale.system_configuration.fields.format_address_by_address_country.label
                 tooltip: oro.locale.form.tooltip.format_address_by_address_country
-                required: true
+                required: false
 
         oro_locale.language:
             data_type: string
