--- a/Resources/config/oro/datagrids.yml
+++ b/Resources/config/oro/datagrids.yml
@@ -1,4 +1,4 @@
-datagrid:
+datagrids:
     base-oro-locale-localizations-grid:
         acl_resource: oro_locale_localization_view
         options:
