--- a/Resources/config/oro/system_configuration.yml
+++ b/Resources/config/oro/system_configuration.yml
@@ -1,4 +1,4 @@
-oro_system_configuration:
+system_configuration:
     groups:
         localization:
             title: oro.locale.system_configuration.groups.localization.title
