--- a/Resources/config/oro/datagrid.yml
+++ b/Resources/config/oro/datagrid.yml
@@ -1,4 +1,4 @@
-datagrids:
+datagrid:
     base-oro-locale-localizations-grid:
         acl_resource: oro_locale_localization_view
         options:
