--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -1,4 +1,4 @@
-system_configuration:
+oro_system_configuration:
     groups:
         localization:
             title: oro.locale.system_configuration.groups.localization.title
