BAP-10013: A plural alias for "Extend\Entity\EV_Prod_Inventory_Status" entity not found - Extend entities are often autoloaded Configuration using \Symfony\Component\DependencyInjection\Compiler\MergeExtensionConfigurationPass so we need to set aliases before its called. During command execution aliases are not set, so any doctrine cache will fail. To fix that we have to avoid caches warmup (do only required warmups) during \Oro\Bundle\EntityExtendBundle\Command\CacheCommand execution - In addition doctrine repository and manager definitions using factory option are marked lazy, not to trigger metadata loading during container compilation

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -292,8 +292,7 @@ services:
             - { name: security.voter }
 
     oro_locale.repository.localization:
-        class: Doctrine\ORM\EntityRepository
-        factory:  ["@oro_entity.doctrine_helper", getEntityRepository]
+        parent: oro_entity.abstract_repository
         arguments:
             - '%oro_locale.entity.localization.class%'
 
