BAP-10013: A plural alias for "Extend\Entity\EV_Prod_Inventory_Status" entity not found - add repository classes

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -292,6 +292,7 @@ services:
             - { name: security.voter }
 
     oro_locale.repository.localization:
+        class: 'Oro\Bundle\LocaleBundle\Entity\Repository\LocalizationRepository'
         parent: oro_entity.abstract_repository
         arguments:
             - '%oro_locale.entity.localization.class%'
