BB-4521: BB-4521 Product search: visibilities, categories and accounts - resolve CircularReferenceException

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -308,7 +308,7 @@ services:
     oro_locale.manager.localization:
         class: 'Oro\Bundle\LocaleBundle\Manager\LocalizationManager'
         arguments:
-            - '@oro_locale.repository.localization'
+            - '@oro_entity.doctrine_helper'
             - '@oro_config.global'
 
     oro_locale.provider.current_localization:
