BB-4787: Fix menu item title double translation - fixed tests - make description field not required - added fallback to application default locale (selected during installation) instead of en - used language_code instead of formatting_code for language in translations

--- a/Resources/config/form_types.yml
+++ b/Resources/config/form_types.yml
@@ -84,9 +84,10 @@ services:
             - { name: form.type, alias: oro_locale_localized_fallback_value_collection }
 
     oro_locale.form.type.translated_localized_fallback_value_colection:
-        class: Oro\Bundle\LocaleBundle\Form\Type\TranslatedLocalizedFallbackValueCollectionType
+        class: 'Oro\Bundle\LocaleBundle\Form\Type\TranslatedLocalizedFallbackValueCollectionType'
         arguments:
             - '@translator'
+            - '%kernel.default_locale%'
         tags:
             - { name: form.type, alias: oro_locale_translated_localized_fallback_value_collection }
 
